# rebase

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
js/rebase-client/crate/: Cargo.toml  LICENSE_MIT  README.md
js/rebase-client/crate/src/: lib.rs
rebase/: Cargo.toml
rebase/examples/: basic_profile.rs  ed25519_basic.rs
rebase/src/: basic_profile.rs  lib.rs  schema_type.rs  signer.rs  twitter.rs
rebase/src/crosskey/: crosskey.rs
rebase/src/schema/: basic_profile.rs  crosskey.rs  mod.rs  schema.rs  schema_type.rs
rebase/src/signer/: ed25519.rs  ethereum.rs  signer.rs  tezos.rs
rust/rebase/: Cargo.toml  README.md
rust/rebase/examples/: README.md  ed25519_basic.rs  ed25519_basic_setup.sh  ed25519_crosskey.rs  ed25519_crosskey_setup.sh  ed25519_self_signed.rs  ed25519_self_signed_setup.sh  util.rs
rust/rebase/src/: lib.rs
rust/rebase/src/content/: basic_post.rs  basic_profile.rs  dns.rs  dns_verification.rs  email.rs  email_verification.rs  github.rs  github_verification.rs  mod.rs  nft_ownership.rs  nft_ownership_verification.rs  poap_ownership.rs  poap_ownership_verification.rs  reddit.rs  reddit_verification.rs  same.rs  same_controller_assertion.rs  soundcloud.rs  soundcloud_verification.rs  twitter.rs  twitter_verification.rs  two_key.rs  witnessed_basic_profile.rs
rust/rebase/src/content/attestation/: basic_image_attestation.rs  basic_post_attestation.rs  basic_profile_attestation.rs  basic_tag_attestation.rs  book_review_attestation.rs  content.rs  dapp_preferences_attestation.rs  delegated_attestation_content.rs  follow_attestation.rs  like_attestation.rs  mod.rs  progress_book_link_attestation.rs
rust/rebase/src/content/delegated_attestation/: content.rs  delegated_basic_image_attestation.rs  delegated_basic_post_attestation.rs  delegated_basic_profile_attestation.rs  delegated_basic_tag_attestation.rs  delegated_book_review_attestation.rs  delegated_dapp_preferences_attestation.rs  delegated_follow_attestation.rs  delegated_like_attestation.rs  delegated_progress_book_link_attestation.rs  mod.rs
rust/rebase/src/content/witnessed_self_issued/: content.rs  mod.rs  witnessed_basic_image.rs  witnessed_basic_post.rs  witnessed_basic_profile.rs  witnessed_basic_tag.rs  witnessed_book_review.rs  witnessed_dapp_preferences.rs  witnessed_follow.rs  witnessed_like.rs  witnessed_progress_book_link.rs
rust/rebase/src/context/: context_loader.rs  mod.rs
rust/rebase/src/crosskey/: crosskey.rs  mod.rs
rust/rebase/src/flow/: attestation.rs  certify.rs  delegated_attestation.rs  dns.rs  dns_verification.rs  email.rs  email_verification.rs  github.rs  github_verification.rs  mod.rs  nft_ownership.rs  nft_ownership_verification.rs  poap_ownership.rs  poap_ownership_verification.rs  reddit.rs  reddit_verification.rs  response.rs  same.rs  same_controller_assertion.rs  soundcloud.rs  soundcloud_verification.rs  twitter.rs  twitter_verification.rs  two_key.rs  witnessed_basic_profile.rs  witnessed_self_issued.rs
rust/rebase/src/issuer/: did_issuer.rs  ed25519.rs  mod.rs
rust/rebase/src/proof/: delegated_attestation.rs  dns.rs  dns_verification.rs  email.rs  email_verification.rs  github.rs  github_verification.rs  mod.rs  nft_ownership.rs  nft_ownership_verification.rs  poap_ownership.rs  poap_ownership_verification.rs  reddit.rs  reddit_verification.rs  same.rs  same_controller_assertion.rs  soundcloud.rs  soundcloud_verification.rs  twitter.rs  twitter_verification.rs  two_key.rs  witnessed_basic_profile.rs
rust/rebase/src/proof/attestation/: attestation_proof.rs  basic_image_attestation.rs  basic_post_attestation.rs  basic_profile_attestation.rs  basic_tag_attestation.rs  book_review_attestation.rs  dapp_preferences_attestation.rs  follow_attestation.rs  like_attestation.rs  mod.rs  progress_book_link_attestation.rs  proof.rs
rust/rebase/src/proof/witnessed_self_issued/: mod.rs  proof.rs  witnessed_basic_image.rs  witnessed_basic_post.rs  witnessed_basic_profile.rs  witnessed_basic_tag.rs  witnessed_book_review.rs  witnessed_dapp_preferences.rs  witnessed_follow.rs  witnessed_like.rs  witnessed_progress_book_link.rs
rust/rebase/src/schema/: basic_post.rs  basic_profile.rs  crosskey.rs  mod.rs  schema_type.rs  self_signed.rs  twitter.rs
rust/rebase/src/signer/: ed25519.rs  ethereum.rs  mod.rs  signer.rs  solana.rs
rust/rebase/src/statement/: dns.rs  dns_verification.rs  email.rs  email_verification.rs  github.rs  github_verification.rs  mod.rs  nft_ownership.rs  nft_ownership_verification.rs  poap_ownership.rs  poap_ownership_verification.rs  reddit.rs  reddit_verification.rs  same.rs  same_controller_assertion.rs  soundcloud.rs  soundcloud_verification.rs  twitter.rs  twitter_verification.rs  two_key.rs  witnessed_basic_profile.rs
rust/rebase/src/statement/attestation/: basic_image_attestation.rs  basic_post_attestation.rs  basic_profile_attestation.rs  basic_tag_attestation.rs  book_review_attestation.rs  dapp_preferences_attestation.rs  follow_attestation.rs  like_attestation.rs  mod.rs  progress_book_link_attestation.rs  statement.rs
rust/rebase/src/statement/witnessed_self_issued/: mod.rs  statement.rs  (+9 more)
rust/rebase/src/subject/: did_key.rs  did_subject.rs  ed25519.rs  ethereum.rs  mod.rs  solana.rs
rust/rebase/src/test_util/: util.rs
rust/rebase/src/types/: defs.rs  error.rs  mod.rs  types.rs
rust/rebase/src/util/: util.rs
rust/rebase/src/witness/: dns.rs  email.rs  generator.rs  github.rs  instructions.rs  mod.rs  proof_type.rs  reddit.rs  self_signed.rs  signer_type.rs  signers.rs  soundcloud.rs  statement_type.rs  twitter.rs  witness.rs
rust/rebase_cf_worker/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  package.json
rust/rebase_cf_worker/src/: lib.rs
rust/rebase_vc_witness_axum/: .gitignore  Cargo.toml  README.md  example_rebase.json
rust/rebase_vc_witness_axum/examples/: server_example.rs
rust/rebase_vc_witness_axum/src/: lib.rs
rust/rebase_witness_sdk/: Cargo.toml  README.md
rust/rebase_witness_sdk/examples/: live_posts.rs
rust/rebase_witness_sdk/src/: client.rs  lib.rs  types.rs  witness.rs
(+233 files in other folders)
