[package]
name = "rebase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
serde = "1"
serde_json = "1"
ssi = "0.4"
uuid = { version = "0.8", features = ["serde", "v4", "stdweb"] }
