[package]
name = "rebase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
did-web = "0.1.2"
serde = "1"
serde_json = "1"
ssi = "0.4"
thiserror = "1"
uuid = { version = "0.8", features = ["serde", "v4", "stdweb"] }

[dev-dependencies]
tokio = {version = "1", features = ["full"]}