[package]
name = "rebase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
base58 = "0.2.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
did-web = "0.2.1"
# did-web = {path = "../../../ssi/did-web"}
ed25519-dalek = "1" 
hex = "0.3"
k256 = { version = "0.11", default-features = false, features = ["std", "ecdsa", "keccak256"] }

regex = "1"
reqwest = { version = "0.11.11", features = ["json"] }

schemars = { version = "0.8", features = ["chrono", "url"] }
serde = "1"
serde_json = "1"
sha3 = "0.9"
ssi = { version = "0.6", default-features = false, features = ["ed25519", "secp256k1", "secp256r1"] }
# ssi = { path = "../../../ssi", default-features = false, features = ["ed25519", "secp256k1", "secp256r1"] }
ssi-dids = "0.1.1"
# ssi-dids = {path = "../../../ssi/ssi-dids"}

thiserror = "1"
ts-rs = "6.2"

url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4", "stdweb"] }
did-jwk = "0.1.1"
# did-jwk = {path = "../../../ssi/did-jwk"}
did-webkey = "0.2.2"
# did-webkey = {path = "../../../ssi/did-webkey"}
did-ethr = "0.2.1"
# did-ethr = {path = "../../../ssi/did-ethr"}
did-method-key = "0.2.1"
# did-method-key = {path = "../../../ssi/did-key"}
did-pkh = "0.2.1"
# did-pkh = {path = "../../../ssi/did-pkh"}

[dev-dependencies]
tokio = {version = "1", features = ["full", "macros"]}
