[package]
name = "rebase"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rebase is a library for witnessing cryptographic attestations and issuing verifiable credentials"
homepage = "https://www.spruceid.dev/rebase"
documentation = "https://www.spruceid.dev/rebase"
repository = "https://github.com/spruceid/rebase/"
keywords = ["cryptography", "identity", "credentials"]
authors = ["Spruce Systems, Inc."]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
base64 = "0.21.3"
base58 = "0.2.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
cacaos = "0.5"

did-jwk = "0.1.1"
did-webkey = "0.2.2"
did-ethr = "0.2.1"
did-method-key = "0.2.1"
did-pkh = "0.2.1"
did-tz = "0.2.1"
did-onion = "0.2.1"
did-ion = "0.2.0"
did-web = "0.2.1"

ed25519-dalek = "1" 
hex = "0.4"
http = "0.2"

# NOTE: This HAS to be pegged to the version used by siwe-recap
iri-string = { version = "0.6", features = ["serde"] }

k256 = { version = "0.11", default-features = false, features = ["std", "ecdsa", "keccak256"] }

libipld = { version = "0.14", default-features = false, features = ["dag-cbor", "dag-json", "derive", "serde-codec"]}
regex = "1"
reqwest = { version = "0.11.11", features = ["json"] }

schemars = { version = "0.8", features = ["chrono", "url"] }
serde = "1"
serde_json = "1"
serde_with = "1"
sha3 = "0.9"
ssi = { version = "0.7", default-features = false, features = ["ed25519"] }

strum = {version = "0.21", features = ["derive"]}
siwe-recap = "0.2"
siwe = "0.5"
ssi-dids = "0.1.1"

thiserror = "1"
time = {version = "0.3.28", features = ["wasm-bindgen"]}
tsify = "0.4.5"

url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4", "stdweb"] }
# NOTE: This is used by tsify
wasm-bindgen = "0.2.84"


[dev-dependencies]
tokio = {version = "1", features = ["full", "macros"]}
