[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"
license = "Apache 2.0/MIT"
description = "Rebase Cloudflare Worker is a library for witnessing cryptographic attestations and issuing verifiable credentials"
homepage = "https://app.gitbook.com/o/YHxbgvbOJwARzKZAVAA0/s/26YU5vsZtoFoS8RimaG4/rebase/rebase"
documentation = "https://app.gitbook.com/o/YHxbgvbOJwARzKZAVAA0/s/26YU5vsZtoFoS8RimaG4/rebase/rebase"
keywords = ["cryptography", "identity", "credentials"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rebase_witness_sdk = {path = "../rebase_witness_sdk"}
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"