[package]
name = "rebase-worker"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rebase Cloudflare Worker is a library for witnessing cryptographic attestations and issuing verifiable credentials"
homepage = "https://www.spruceid.dev/rebase"
documentation = "https://www.spruceid.dev/rebase"
keywords = ["cryptography", "identity", "credentials"]
authors = ["Spruce Systems, Inc."]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rebase_witness_sdk = "0.1.3"
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.67"
time = {version = "0.3.28", features = ["wasm-bindgen"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
