[package]
name = "rebase_vc_witness_axum"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "This is a library that exposes a Rebase witness as an Axum Service"
homepage = "https://www.spruceid.dev/rebase"
documentation = "https://www.spruceid.dev/rebase"
repository = "https://github.com/spruceid/rebase/"
keywords = ["cryptography", "identity", "credentials"]
authors = ["Spruce Systems, Inc."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
axum-macros = "0.3.8"
rebase_witness_sdk = "0.1.5"
serde = "1"
serde_json = "1"

[dev_dependencies]
tokio = {version = "1", features = ["full", "macros"]}