[package]
name = "rebase_witness_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Point to crate.
rebase = { path = "../rebase" }
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1"
serde_json = "1"
thiserror = "1"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = {version = "1", features = ["full", "macros"]}