[package]
name = "rebase_witness_sdk"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rebase Witness SDK is a library for witnessing cryptographic attestations and issuing verifiable credentials"
homepage = "https://www.spruceid.dev/rebase"
documentation = "https://www.spruceid.dev/rebase"
keywords = ["cryptography", "identity", "credentials"]
authors = ["Spruce Systems, Inc."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
base64 = "0.21.3"
# rebase = "0.1.0"
rebase = { path = "../rebase" }
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1"
serde_json = "1"
time = {version = "0.3.28", features = ["wasm-bindgen"]}
thiserror = "1"
ts-rs = "6.2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = {version = "1", features = ["full", "macros"]}
